2004-08-10  Johan Dahlin  <johan@gnome.org>

	* Makefile.am (dist-nodoc): New target

	* docs/ref: Adding Johns reference manual

	* docs/: (incomplete) buildsystem for documentation and removing
	old documentation

2004-08-08  John Finlay  <finlay@moeraki.com>

	* gobject/pygflags.c (pyg_flags_add) Return NULL when no stub.

2004-08-06  Johan Dahlin  <johan@gnome.org>

	* configure.in (ACLOCAL): 

	* setup.py (MICRO_VERSION): Post release version bump
	
	
=== PyGtk 2.3.96 ===
2004-08-06  Johan Dahlin  <johan@gnome.org>
	* NEWS: Update.

	* gobject/pygflags.c (pyg_flags_from_gtype): Don't comment out the
	fallback, it break the test. (Wow, the testsuite caught another bug!)

	* tests/enum.py: Additional tests.

	* gobject/pygenum.c (pyg_enum_repr): Don't use g_enum_get_value,
	use enum_class->values[n].value_name instead. Also check if the
	value is NULL or not. This makes gtk.icon_size_register work a
	little bit better.

	* codegen/codegen.py (Wrapper.write_methods): Use methflags
	argument for defines instead of discarding it

2004-08-04  John Finlay  <finlay@moeraki.com>

	* codegen/argtypes.py Return string instead of Atom.

	* gtk/gtk.override (_wrap_gtk_selection_data_get_targets)
	(_wrap_gtk_drag_dest_find_target)
	(_wrap_gtk_drag_dest_get_target_list)
	(_wrap_gtk_clipboard_wait_for_targets)
	(clipboard_request_targets_cb)
	Return string(s) instead of Atom(s).

	* gtk/gtkmodule.c (init_gtk) Add string instead of Atom using
	add_atom.
	
2004-08-04  Johan Dahlin  <johan@gnome.org>

	* tests/enum.py (EnumTest.testOutofBounds): New test.

	* gobject/pygflags.c (pyg_flags_from_gtype): 
	* gobject/pygenum.c (pyg_enum_from_gtype): Don't segfault on
	unknown values.

2004-08-04  John Finlay  <finlay@moeraki.com>

	* gtk/gtk.override (_wrap_gtk_stock_lookup)
	(_wrap_gtk_accelerator_parse) (gtk_accel_map_lookup_entry)
	Use flags instead of enum.

	gtk/gdk.override (_wrap_gdk_event_tp_getattr)
	Return flags instead of ints for event members.