@@ -1,3 +1,10 @@
+Wed Aug 11 11:43:07 2004  Jonathan Blandford  <jrb@redhat.com>
+
+	* Makefile.am:
+	* gtk/Makefile.am: use $(pyexecdir) instead of $(pythondir)
+	as the module as a whole should be installed in the same place,
+	#149849
+
 2004-08-10  Johan Dahlin  <johan@gnome.org>
 
 	* Makefile.am (dist-nodoc): New target
